# file-mind

./: .gitignore  AUTHORS.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  vercel.json
backend/api/: index.py
backend/app/: config.py  main.py
backend/app/api/items/: file_item.py
backend/app/api/routes/: ai.py  files.py  health.py  users.py
backend/app/api/v1/: router.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/enums/: category.py  format.py
backend/app/extractors/: pdf.py  registry.py
backend/app/models/: file.py  user.py
backend/app/schemas/: __init__.py  file.py
backend/app/services/: extraction.py  extractor.py
frontend/: index.html  package-lock.json  vercel.json
frontend/api/: index.py
frontend/src/: main.jsx
frontend/src/modules/app/components/: App.jsx  Footer.jsx  Header.jsx  Home.jsx
frontend/src/modules/search/components/: DocumentDrawer.jsx  ResultTable.jsx  SearchForm.jsx
frontend/src/modules/upload/components/: UploadFile.jsx  UploadForm.jsx
